Fix AVAD code to Java 8 compatibility for benchmark module
Convert Java 9+ features to Java 8 equivalents:
- Switch expressions -> if/else chains
- ProcessHandle.current().pid() -> ManagementFactory.getRuntimeMXBean().getName()
- Path.of() -> Paths.get()
- String.isBlank() -> .trim().isEmpty()
- List.of() -> Collections.singletonList()
- String.repeat() -> StringBuilder loop
- var -> explicit types

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>